fixed the classifieds cards alignment css

--- a/frontend/scss/classifieds.scss
+++ b/frontend/scss/classifieds.scss
@@ -36,7 +36,7 @@ body {
 }
 
 .card-title {
-  height: 40px;
+  height: 53px;
   width: auto;
   white-space: pre-wrap;
   overflow: hidden;
